--- a/style.css
+++ b/style.css
@@ -22,12 +22,20 @@ p {
 
 nav ul{
   padding-top: 10px;
+  font-size: 20px;
 }
 nav ul li{
   display:inline;
   border-right: 1px solid black;
   padding: 0 10px;
+  font-size: 20px;
 }
 .hobby ul{
   padding-left: 40px;
+  font-size: 20;
+}
+p {
+  font-size: 20px;
+  word-spacing: 5px;
+  line-height: 40px;
 }
