--- a/style.css
+++ b/style.css
@@ -16,18 +16,20 @@ h2 {
   text-align: center;
   font-size: 40px;
 }
+h3 {
+  display: block;
+  margin-left: 260px;
+}
 p {
   padding-left: 50px;
 }
 
-nav ul{
-  padding-top: 10px;
-  font-size: 20px;
-}
-nav ul li{
-  display:inline;
-  border-right: 1px solid black;
-  padding: 0 10px;
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-bottom: 3px solid black;
+  padding: 10px 10px;
   font-size: 20px;
 }
 .hobby ul{
@@ -38,10 +40,27 @@ p {
   font-size: 20px;
   word-spacing: 5px;
   line-height: 40px;
+  margin: 30px;
 }
 
-label {
+label1 {
+  display: block;
+  text-align: center;
   font-size: 25px;
   word-spacing: 5px;
-  margin: 30px;
+  margin: 20px 10px 10px 10px;
+  border: 10px;
+  padding: 1px 1px;
+}
+
+div1 {
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+div2 {
+  display: block;
+  padding: 10px;
+  margin: 5px 5px 5px 250px;
 }
